# lark-bash

./: .gitignore  AGENTS.md  LICENSE  README.md  benchmark.py  extractor.py  parser.py  pyproject.toml  requirements.txt  subparsers.py
bash_lark/: __init__.py  ast.py  grammar.py  parser.py
docs/: POSIX-Shell.ebnf.txt  Posix Shell Commad Language.md
examples/: minimal.sh
grammar/: bash_minimal.lark  heredoc_scan.lark  subparsers.lark  word_parts.lark
scripts/: debug_extract.py  parse_and_benchmark.py
tests/: test_examples.py  test_iteration_upgrade.py  test_parser.py  test_smoke_examples.py  test_subparsers.py
